# glossgo-salon-copilot

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/landing/: README.md  index.html  wrangler.toml
apps/mcp-calendar/: Dockerfile  package.json  tsconfig.json
apps/mcp-calendar/src/: index.ts  server.ts
apps/mcp-comms/: Dockerfile  package.json
apps/mcp-comms/src/: index.ts  server.ts
apps/mcp-data/: .env.example  Dockerfile  package.json
apps/mcp-data/src/: db.ts  index.ts  server.ts
apps/orchestrator/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
apps/orchestrator/orchestrator/: __init__.py  agent.py
apps/orchestrator/orchestrator/sub_agents/: __init__.py  _mcp.py  calendar_optimizer.py  no_show_recovery.py  review_responder.py
docs/: SECURITY.md  architecture.mmd  demo-video-script-basic-en.md  demo-video-script.md  deploy.md  devpost-checklist.md  judges-guide.md  sprint-log.md
scripts/: deploy-cloudrun.sh  gen-images-replicate.py  gen_explainer_images.py  run-local.sh
