[project]
name = "glossgo-copilot-orchestrator"
version = "0.1.0"
description = "Root ADK agent that routes salon events to specialist sub-agents"
requires-python = ">=3.11"
dependencies = [
  "google-adk>=1.0.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "google-cloud-pubsub>=2.27.0",
  "pydantic>=2.9.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.28.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
